# backend/internal/repository/model/bookmark.go
@@ -1,0 +1,10 @@
+package model
+
+import "time"
+
+type Bookmark struct {
+	ID        string `gorm:"type:uuid;primaryKey"`
+	UserID    string `gorm:"type:uuid;not null"`
+	PostID    string `gorm:"type:uuid;not null"`
+	CreatedAt time.Time
+}
