# backend/internal/repository/model/post.go
@@ -11,4 +11,5 @@ type Post struct {
 	MediaURL  *string
 	CreatedAt time.Time
 	DeletedAt *time.Time
+	Author    User   `gorm:"foreignKey:AuthorID"`
 }
